Skupinove riesenie konfliktov a detailov

--- a/dispatcher_application/access_management/templates/access_management/group_main.html
+++ b/dispatcher_application/access_management/templates/access_management/group_main.html
@@ -1,10 +1,7 @@
 {% extends 'base_template.html' %}
 
-{% block title %}List of Location{% endblock %}
+{% block title %}List locations{% endblock %}
 
-{% block nav %} 
-    {% include "navbar.html" %}
-{% endblock nav %}
 
 {% block content %}
 <br>
