--- a/dispatcher_application/branch_management/templates/branch_management/branch_access.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_access.html
@@ -1,11 +1,6 @@
 {% extends 'base_template.html' %}
 
-{% block title %}Access list{% endblock %}
-
-{% block nav %} 
-    {% include "navbar.html" %}
-{% endblock nav %}
-
+{% block title %}Branch access{% endblock %}
 
 {% block content %}
 <div class="row">
