--- a/dispatcher_application/branch_management/templates/branch_management/branch_access_delete.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_access_delete.html
@@ -1,11 +1,6 @@
 {% extends 'base_template.html' %}
 
-{% block title %}Remove Access{% endblock %}
-
-{% block nav %} 
-    {% include "navbar.html" %}
-{% endblock nav %}
-
+{% block title %}Delete Access{% endblock %}
 
 {% block content %}
     <a class="bi bi-arrow-bar-left btn btn-lg" href="{{ request.META.HTTP_REFERER }}" style="text-align: left;"></a>
