--- a/dispatcher_application/branch_management/templates/branch_management/branch_update.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_update.html
@@ -1,15 +1,11 @@
 {% extends 'base_template.html' %}
 
-{% block title %}Add branch{% endblock %}
+{% block title %}Update branch{% endblock %}
 
 {% block static_imports %}
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
 {% endblock static_imports %}
-
-{% block nav %} 
-    {% include "navbar.html" %}
-{% endblock nav %}
 
 {% block content %}
 <div class="row">
