--- a/dispatcher_application/user_settings/templates/user_settings/profile_password_change.html
+++ b/dispatcher_application/user_settings/templates/user_settings/profile_password_change.html
@@ -1,6 +1,6 @@
 {% extends 'base_template.html' %}
 
-{% block title %}Settings{% endblock %}
+{% block title %}Change password{% endblock %}
 
 {% block content %}
     <a class="back-link" href="{% url 'user-settings' %}"><i class="bi bi-arrow-bar-left"></i></a>
