--- a/dispatcher_application/access_management/templates/access_management/group_add.html
+++ b/dispatcher_application/access_management/templates/access_management/group_add.html
@@ -1,13 +1,11 @@
 {% extends 'base_template.html' %}
 
-{% block nav %} 
-    {% include "navbar.html" %}
-{% endblock nav %}
+{% block title %}Add group{% endblock %}
 
 {% block content %}
 <div class="row">
     <div class="col-xl-3 col-md-2 col-sm-1 col-1 p-1" style="text-align: left;">
-    <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'groups' %}"></a>
+    <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'group-list' %}"></a>
 </div>
     <div class="col-xl-7 col-md-2 col-sm-1 col-4 p-1" style="text-align: center;"><h2>Add Group</h2></div>
 </div>
