--- a/dispatcher_application/access_management/templates/access_management/group_list.html
+++ b/dispatcher_application/access_management/templates/access_management/group_list.html
@@ -1,10 +1,10 @@
 {% extends 'base_template.html' %}
 
-{% block title %}Group list{% endblock %}
+{% block title %}Groups{% endblock %}
 
 {% block content %}
 <br>
-    <h2>List of Groups</h2>
+    <h2>Groups</h2>
     <a class="bi bi-plus-circle btn btn-lg" href="{% url 'group-add' %}"></a>
     <table class="table table-hover">
         <thead class="thead-dark">
