--- a/dispatcher_application/known_locations_management/templates/known_locations_management/location_delete.html
+++ b/dispatcher_application/known_locations_management/templates/known_locations_management/location_delete.html
@@ -1,11 +1,6 @@
 {% extends "base_template.html" %}
 
-{% block title %}Delete Location{% endblock %}
-
-{% block nav %} 
-    {% include "navbar.html" %}
-{% endblock nav %}
-
+{% block title %}Delete location{% endblock %}
 
 {% block content %}
 <div class="row">
