--- a/dispatcher_application/transport_management/static/css/transport.css
+++ b/dispatcher_application/transport_management/static/css/transport.css
@@ -6,13 +6,13 @@
 
 /* form style */
 .form-class {
-  border: 1px solid #e7e7e7;
-  margin: 80px auto;
+  /* border: 1px solid #e7e7e7; */
+  /* margin: 80px auto; */
   /*width: 300px;*/
   padding: 40px 40px 40px 40px;
 }
 
-div {
+form div {
     padding: 5px;
 }
 
