--- a/dispatcher_application/templates/base_template.html
+++ b/dispatcher_application/templates/base_template.html
@@ -13,9 +13,9 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     
-    {% block static_imports %}
-        
-    {% endblock %}
+    {% block static_imports %}{% endblock %}
+
+    {% block js_content %}{% endblock %}
     
     <title>{% block title %}{% endblock %}</title>
 
@@ -37,10 +37,10 @@
         {% endblock %}
     </div>
 
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous">
     </script>
-
 </body>
 </html>
