--- a/dispatcher_application/access_management/templates/access_management/group_manage.html
+++ b/dispatcher_application/access_management/templates/access_management/group_manage.html
@@ -7,10 +7,6 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/form_style.css' %}">
 {% endblock %}
 
-{% block js_content %}
-    <script src="{% static 'js/form_functions.js' %}"></script>
-{% endblock %}
-
 
 {% block content %}
 <div class="row">
@@ -22,15 +18,15 @@
 
 <div class="container" style="text-align: left; padding: auto;">
     <br>
-    <form action="" method="POST" onSubmit="return validateForm(this)">
+    <form action="" method="POST" onSubmit="return validateForm()">
         {% csrf_token %}
         {{ form.as_p }}
         <input class="" type="submit" value="{{ form_action_type }}">
         
-        <div class="error-class">
+        <div id="err">
             {% for field in form %}
                 {% if field.errors %}
-                    <li>{{ field.label }}: {{ field.errors|striptags }}</li>
+                    <li>{{ field.label }} : {{ field.errors|striptags }}</li>
                 {% endif %}
             {% endfor %} 
         </div>
@@ -38,6 +34,10 @@
     
 </div>
 
-
 {% endblock  %}
 
+
+{% block js_content %}
+    {% load static %}
+    <script type="text/javascript" src="{% static 'js/group_form_functions.js' %}"></script> 
+{% endblock %}
