--- a/dispatcher_application/known_locations_management/templates/known_locations_management/location_list.html
+++ b/dispatcher_application/known_locations_management/templates/known_locations_management/location_list.html
@@ -6,7 +6,16 @@
 <br>
 <div>
     <h2>Locations</h2>
-    <a class="bi bi-plus-circle btn btn-lg" href="{% url 'location-add' %}"></a>
+
+    <div class="functions-bar">
+        <a class="bi bi-plus-circle btn btn-lg" href="{% url 'location-add' %}"></a>
+
+        <form method="GET">
+            <button type="submit" class="search-button"><i class="bi bi-search"></i></button>
+            <input class="search-field" type="text" name="search-box" id="s-box" value="{{ search_value }}" placeholder="zip,city,country">
+        </form>
+    </div>
+
     <table class="table table-hover">
         <thead class="thead-dark">
         <tr>
@@ -33,5 +42,10 @@
         {% endfor %}
         </tbody >
     </table>
+
 </div>
+
+
+{% include 'pagination.html' %}
+
 {% endblock %}
