--- a/dispatcher_application/static/css/base.css
+++ b/dispatcher_application/static/css/base.css
@@ -1,3 +1,10 @@
+:root {
+    --dark-gray: rgb(100, 100, 100);
+    --white: #ffffff;
+    --gefco-blue: #021D49;
+    --gefco-red: #E1261C;
+  }
+
 body {
     color: rgb(100, 100, 100);
     font-family: 'Nunito', sans-serif;
@@ -44,11 +51,51 @@ form input {
 }
 
 .blue {
-    background-color: #021D49;
+    background-color: var(--gefco-blue);
     padding: 0%;
 }
 
 .red {
-    background-color: #E1261C;
+    background-color: var(--gefco-red);
     padding: 0%;
+}
+
+
+/* FUNCTION BAR ADD & SERACH   */
+.functions-bar {
+    display: flex;
+    justify-content: space-between;
+}
+
+/* search */
+.search-button {
+    border: 0;
+    color: var(--dark-gray);
+    background-color: var(--white);
+    border-radius: 3px;
+    padding-top: 1.5px;
+    padding-bottom: 1.5px;
+}
+
+.search-button:hover {
+    color:var(--gefco-blue);
+}
+
+.search-field {
+    border: 2px solid var(--dark-gray);
+    padding: 0.5px; 
+} 
+
+.pagination {
+    display: -webkit-box;  
+    display: -ms-flexbox;  
+    display: -webkit-flex; 
+    display: flex;         
+    
+    justify-content: center;
+    align-items: center;
+}
+
+.pagination a {
+    color: var(--dark-gray);
 }
