--- a/dispatcher_application/templates/base_template.html
+++ b/dispatcher_application/templates/base_template.html
@@ -12,10 +12,9 @@
 
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/pagination.css' %}">
     
     {% block static_imports %}{% endblock %}
-
-    {% block js_content %}{% endblock %}
     
     <title>{% block title %}{% endblock %}</title>
 
@@ -38,9 +37,13 @@
     </div>
 
 
+    {% block js_content %}{% endblock %}
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous">
     </script>
+
+    
 </body>
 </html>
