--- a/dispatcher_application/templates/pagination.html
+++ b/dispatcher_application/templates/pagination.html
@@ -1,8 +1,8 @@
 <div class="pagination">
     <span class="step-links">
         {% if page_obj.has_previous %}
-            <a href="?page=1"><i class="bi bi-chevron-bar-left"></i></a>
-            <a href="?page={{ page_obj.previous_page_number }}"><i class="bi bi-chevron-double-left"></i></a>
+            <a class="bi bi-chevron-bar-left" href="?page=1{{ filter }}"></a>
+            <a class="bi bi-chevron-double-left" href="?page={{ page_obj.previous_page_number }}{{ filter }}"></a>
         {% endif %}
 
         <span class="current">
@@ -10,8 +10,10 @@
         </span>
 
         {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}"><i class="bi bi-chevron-double-right"></i></a>
-            <a href="?page={{ page_obj.paginator.num_pages }}"><i class="bi bi-chevron-bar-right"></i></a>
+            <a class="bi bi-chevron-double-right" href="?page={{ page_obj.next_page_number }}{{ filter }}"></a>
+            <a class="bi bi-chevron-bar-right" href="?page={{ page_obj.paginator.num_pages }}{{ filter }}"></a>
         {% endif %}
     </span>
 </div>
+
+
