Error handling in forms and form formating

--- a/dispatcher_application/user_management/templates/user_management/user_list.html
+++ b/dispatcher_application/user_management/templates/user_management/user_list.html
@@ -2,13 +2,10 @@
 
 {% block title %}Users{% endblock %}
 
-
 {% comment %} {% block static_imports %}
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/table_style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/location_style.css' %}">
 {% endblock %} {% endcomment %}
-
-
 
 {% block content %}
 <br>
