--- a/dispatcher_application/user_management/templates/user_management/user_update.html
+++ b/dispatcher_application/user_management/templates/user_management/user_update.html
@@ -6,6 +6,11 @@
     {% include "navbar.html" %}
 {% endblock nav %}
 
+{% block static_imports %}
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/user_form_style.css' %}">
+{% endblock %}
+
 {% block content %}
 <div class="row">
     <div class="col-xl-3 col-md-2 col-sm-1 col-1 p-1" style="text-align: left;">
@@ -16,10 +21,44 @@
 
 <div class="container" style="text-align: left; padding: auto;">
     <br>
-    <form method="POST" action="">
+    <form method="POST" onSubmit="return validateUpdateForm()">
         {% csrf_token %}
-        {{ form.as_p }}
+      
+        <p>
+            <label for="{{ form.first_name.auto_id }}">{{ form.first_name.label }}</label><br>
+            {{ form.first_name }}
+        </p>
+        <p>
+            <label for="{{ form.last_name.auto_id }}">{{ form.last_name.label }}</label><br>
+            {{ form.last_name }}
+        </p>
+        <p>
+            <label for="{{ form.branch.auto_id }}">{{form.branch.label}}</label><br>
+            {{ form.branch }}
+        </p>
+        <p>
+            <label for="{{ form.is_active.auto_id }}">{{form.is_active.label}}</label>
+            {{ form.is_active }}
+        </p>
+
         <input type="submit" value="Update">
+
+        <div id="err">
+            {% for field in form %}
+                {% if field.errors %}
+                    <li>{{ field.label }} : {{ field.errors|striptags }}</li>
+                {% endif %}
+            {% endfor %} 
+            {% if form.non_field_errors %}
+                {{ form.non_field_errors }}
+            {% endif %}
+        </div>
     </form>
 </div>
+{% endblock %}
+
+
+{% block js_content %}
+    {% load static %}
+    <script type="text/javascript" src="{% static 'js/user_form_functions.js' %}"></script> 
 {% endblock %}
