--- a/dispatcher_application/known_locations_management/templates/known_locations_management/location_list.html
+++ b/dispatcher_application/known_locations_management/templates/known_locations_management/location_list.html
@@ -2,6 +2,12 @@
 
 {% block title %}Locations{% endblock %}
 
+{% block static_imports %}
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/location_style.css' %}">
+{% endblock %}
+
+
 {% block content %}
 <br>
 <div>
