--- a/dispatcher_application/static/css/base.css
+++ b/dispatcher_application/static/css/base.css
@@ -1,21 +1,20 @@
 :root {
-    --dark-gray: rgb(100, 100, 100);
+    --gray: rgb(100, 100, 100);
+    --dark-gray: rgb(73, 73, 73);
     --white: #ffffff;
     --gefco-blue: #021D49;
     --gefco-red: #E1261C;
   }
 
 body {
-    color: rgb(100, 100, 100);
+    color: var(--dark-gray);
     font-family: 'Nunito', sans-serif;
 }
 
 .container {
-    /* max-width: 750px; */
     margin: auto;
     background-color: #fff;
     padding: 0;
-    
 }
 
 table {
@@ -24,21 +23,31 @@ table {
     width: 100%;
 }
 
+
+/* GENERAL FORM */
 form div {
     margin: 5px;
 }
 
-form input {
-    border: 2px solid rgb(100, 100, 100);
-    color: rgb(51, 50, 50);
-    background-color: #fff;
+form input, form select {
+    border: 2px solid var(--dark-gray);
+    color: var(--dark-gray);
+    background-color: white;
     border-radius: 4px;
     padding: 7px;
+    width: 35%;
 }
 
+form input[type=checkbox] {
+    width: auto;
+}
+
+
+/* BUTTONOS */
 .submit-btn { 
     background-color: white;
-    border: 2px solid rgb(100, 100, 100);
+    color: var(--dark-gray);
+    border: 2px solid var(--dark-gray);
     padding: 5px 10px;
     border-radius: 5px;
     font-size: 17px;
@@ -46,9 +55,13 @@ form input {
 }
 
 .submit-btn:hover {
+    background-color: var(--gefco-blue);
+    border-color: var(--gefco-blue);
     color: white;
-    background-color: rgb(100, 100, 100);
+    transition: all 0.8s
 }
+
+
 
 .blue {
     background-color: var(--gefco-blue);
@@ -70,7 +83,7 @@ form input {
 /* search */
 .search-button {
     border: 0;
-    color: var(--dark-gray);
+    color: var(--gray);
     background-color: var(--white);
     border-radius: 3px;
     padding-top: 1.5px;
@@ -82,7 +95,7 @@ form input {
 }
 
 .search-field {
-    border: 2px solid var(--dark-gray);
+    border: 2px solid var(--gray);
     padding: 0.5px; 
 } 
 
@@ -97,5 +110,14 @@ form input {
 }
 
 .pagination a {
-    color: var(--dark-gray);
+    color: var(--gray);
+}
+
+
+#err {
+    color : var(--gefco-red);
+}
+
+.errInput {
+    border-color: var(--gefco-red);
 }
