--- a/dispatcher_application/authentication/templates/authentication/reset_password.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 	<div class="container" style="text-align: left;">
-		<a class="bi bi-arrow-bar-left" href="{% url 'login' %}"></a>
+		<a class="bi bi-arrow-bar-left btn btn-md" href="{% url 'login' %}"></a>
 		
 		<h3>Password reset</h3>
 		
