--- a/dispatcher_application/access_management/templates/access_management/group_access_add.html
+++ b/dispatcher_application/access_management/templates/access_management/group_access_add.html
@@ -3,19 +3,35 @@
 {% block title %}Add group access{% endblock %}
 
 {% block content %}
+{% comment "" %}
 <div class="row">
     <div class="col-xl-3 col-md-2 col-sm-1 col-1 p-1" style="text-align: left;">
     <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'group-access' group_id %}"></a>
     </div>
     <div class="col-xl-7 col-md-2 col-sm-1 col-4 p-1" style="text-align: center;"><h2>Add access</h2></div>
 </div>
+{% endcomment %}
 
-<div class="container" style="text-align: left; padding: auto;">
+<div class="container">
+    <div class="row">
+      <div class="col">
+        <a class="bi bi-arrow-bar-left btn btn-lg" id="back" href="{% url 'group-access' group_id %}"></a>
+      </div>
+      <div class="col-6" style="text-align: center;">
+        <h2>Add access</h2>
+      </div>
+      <div class="col">
+      </div>
+    </div>
+</div>
+<br>
+
+<div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
     <br>
-    <form method="POST">
+    <form method="POST" class="formular2">
         {% csrf_token %}
         {{ form.as_p }}
-        <input class="" type="submit" value="Add">
+        <input class="btn btn-primary" id="btn-f2" type="submit" value="Add">
     </form>
 </div>
 {% endblock %}
