--- a/dispatcher_application/access_management/templates/access_management/group_list.html
+++ b/dispatcher_application/access_management/templates/access_management/group_list.html
@@ -5,7 +5,21 @@
 {% block content %}
 <br>
   <h2>Groups</h2>
-    <a class="bi bi-plus-circle btn btn-lg" href="{% url 'group-add' %}"></a>
+
+    <div class="functions-bar">
+      <a class="bi bi-plus-circle btn btn-lg" href="{% url 'group-add' %}"></a>
+
+      <form method="GET">
+          <button type="submit" class="search-button"><i class="bi bi-search"></i></button>
+          <input class="search-field" type="text" name="search-box" id="s-box" value="{{ search_value }}" placeholder="group name">
+      </form>
+
+      <form method="GET">
+        {{filter.form}}
+        <button class="bi bi-search btn btn-lg" type="submit"></button>
+    </form>
+  </div>
+
     <table class="table table-hover">
         <thead class="thead-dark">
         <tr>
@@ -25,7 +39,7 @@
                     <a class="bi bi-pencil-square btn btn-sm" href="{% url 'group-update' group.id %}"></a>
                 </td>
                 <td>
-                    <a class="" href="{% url 'group-access' group.id %}"><i class="bi bi-gear"></i></a>
+                    <a class="bi bi-gear btn btn-sm" href="{% url 'group-access' group.id %}"></a>
                 </td>
                 <td>
                     <a class="bi bi-x-lg btn btn-sm" href="{% url 'group-delete' group.id %}"></a>
