--- a/dispatcher_application/access_management/templates/access_management/group_manage.html
+++ b/dispatcher_application/access_management/templates/access_management/group_manage.html
@@ -9,6 +9,7 @@
 
 
 {% block content %}
+{% comment "" %}
 <div class="row">
     <div class="col-xl-3 col-md-2 col-sm-1 col-1 p-1" style="text-align: left;">
     <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'group-list' %}"></a>
@@ -16,12 +17,27 @@
     <div class="col-xl-7 col-md-2 col-sm-1 col-4 p-1" style="text-align: center;"><h2>Add Group</h2></div>
 </div>
 
-<div class="container" style="text-align: left; padding: auto;">
+{% endcomment %}
+
+<div class="container">
+    <div class="row">
+      <div class="col">
+        <a class="bi bi-arrow-bar-left btn btn-lg" id="back" href="{% url 'group-list' %}"></a>
+      </div>
+      <div class="col-6" style="text-align: center;">
+        <h2>Add Group</h2>
+      </div>
+      <div class="col">
+      </div>
+    </div>
+</div>
+<br>
+<div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
     <br>
-    <form action="" method="POST" onSubmit="return validateForm()">
+    <form action="" method="POST" onSubmit="return validateForm()" class="formular">
         {% csrf_token %}
         {{ form.as_p }}
-        <input class="" type="submit" value="{{ form_action_type }}">
+        <input class="btn btn-primary" type="submit" value="{{ form_action_type }}" style="float: right;">
         
         <div id="err">
             {% for field in form %}
