--- a/dispatcher_application/authentication/static/css/login2.css
+++ b/dispatcher_application/authentication/static/css/login2.css
@@ -4,7 +4,7 @@
     text-align: center;
   }
 
-  .form-class {
+.form-class {
     border: 1px solid #e7e7e7;
     margin: 80px auto;
     width: 300px;
@@ -16,6 +16,17 @@
     display: block;
     position: relative;
 }
+
+.btn-primary:hover {
+  background-color: #021D49;
+  border-color: #021D49;
+}
+
+.btn-primary {
+  background-color: grey;
+  color: white;
+  border-color: grey;
+}  
 
 input {
     background: none;
