--- a/dispatcher_application/authentication/templates/authentication/login.html
+++ b/dispatcher_application/authentication/templates/authentication/login.html
@@ -5,6 +5,19 @@
 {% block static_imports %}
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/login2.css' %}">
+    {% comment "" %}
+    <style>
+        .btn-primary:hover {
+            background-color: #021D49;
+            border-color: #021D49;
+          }
+        .btn-primary {
+            background-color: grey;
+            color: white;
+            border-color: grey;
+          }  
+    </style>
+    {% endcomment %}
 {% endblock %}
 
 {% block content %}
@@ -22,7 +35,7 @@
         </div>
 
         <div>
-            <button class="submit-btn">Login</button>
+            <button class="btn btn-primary">Login</button>
         </div>
 
         {% comment %} <div class="bottom-links">
