--- a/dispatcher_application/authentication/templates/authentication/reset_password_complete.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password_complete.html
@@ -2,13 +2,18 @@
 
 {% block title %}Reset password{% endblock %}
 
+{% block nav %} 
+    {% include "navbar.html" %}
+{% endblock nav %}
+
 {% block content %}
-    <br>
-    <div class="container" style="text-align: left;">
-        <h3>Password reset complete</h3>
+<br>
+<a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'user-list' %}" style="padding-left: 350px"></a>
+    <div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
+            <br>
+            <h3>Password reset complete</h3>
 
-        <p>Your password has been set. You may go ahead and log in now.</p>
-        <a href="{% url 'login' %}">Login</a>
+            <p>Your password has been set. You may go ahead and log in now.</p>
+            <a href="{% url 'login' %}">Login</a>
     </div>
-
 {% endblock %}
