--- a/dispatcher_application/branch_management/templates/branch_management/branch_add.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_add.html
@@ -8,6 +8,7 @@
 {% endblock static_imports %}
 
 {% block content %}
+{% comment "" %}
     <div class="row">
         <div class="col-xl-3 col-md-2 col-sm-1 col-1 p-1" style="text-align: left;">
     <a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'branch-list' %}"></a>
@@ -15,13 +16,28 @@
     <div class="col-xl-7 col-md-2 col-sm-1 col-4 p-1" style="text-align: center;"><h2>Add new branch</h2></div>
     
     </div>
-    
-<div class="container" style="text-align: left; padding: auto;">
+    {% endcomment %}
+
+    <div class="container">
+        <div class="row">
+          <div class="col">
+            <a class="bi bi-arrow-bar-left btn btn-lg" id="back" href="{% url 'branch-list' %}"></a>
+          </div>
+          <div class="col-6" style="text-align: center;">
+            <h2>Add new branch</h2>
+          </div>
+          <div class="col">
+          </div>
+        </div>
+    </div>
     <br>
-    <form method="POST">
+    
+<div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
+    <br>
+    <form method="POST" class="formular2">
         {% csrf_token %}
         {{ form.as_p }}
-        <input class="" type="submit" value="Add" >
+        <input class="btn btn-primary" id="btn-f2" type="submit" value="Add" >
     </form>
 </div>
 {% endblock %}
