--- a/dispatcher_application/branch_management/templates/branch_management/branch_list.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_list.html
@@ -6,7 +6,16 @@
 <br>
 <div>
     <h2>Branches</h2>
-    <a class="bi bi-plus-circle btn btn-lg" href="{% url 'branch-add' %}"></a>
+    
+    <div class="functions-bar">
+        <a class="bi bi-plus-circle btn btn-lg" href="{% url 'branch-add' %}"></a>
+  
+        <form method="GET">
+            <button type="submit" class="search-button"><i class="bi bi-search"></i></button>
+            <input class="search-field" type="text" name="search-box" id="s-box" value="{{ search_value }}" placeholder="branch name">
+        </form>
+    </div>
+
     <table class="table table-hover">
         <thead class="thead-dark">
         <tr>
