--- a/dispatcher_application/user_management/templates/user_management/user_delete.html
+++ b/dispatcher_application/user_management/templates/user_management/user_delete.html
@@ -8,16 +8,13 @@
 
 {% block content %}
 <br>
-    <div class="container" style="text-align: left;">
-        <a class="bi bi-arrow-bar-left" href="{% url 'user-list' %}"></a>
-        
-        <div class="container" style="text-align: left; padding: auto;">
+<a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'user-list' %}" style="padding-left: 350px"></a>
+    <div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
             <br>
-        <form method="POST">
+        <form method="POST" class="text">
             {% csrf_token %}
             <p>Are you sure you want to delete user with email "{{ object.email }}"?</p>
-            <input class="button-class" type="submit" value="Delete"/>
+            <input class="btn btn-primary" type="submit" value="Delete" style="float: right;"/>
         </form>
     </div>
-</div>
 {% endblock %}
