--- a/dispatcher_application/user_management/templates/user_management/user_list.html
+++ b/dispatcher_application/user_management/templates/user_management/user_list.html
@@ -14,13 +14,20 @@
 <br>
 <div>
     <h2>System users</h2>
+    <div class="functions-bar">
         <a class="bi bi-plus-circle btn btn-lg" href="{% url 'user-add' %}"></a>
+  
+        <form method="GET">
+            <button type="submit" class="search-button"><i class="bi bi-search"></i></button>
+            <input class="search-field" type="text" name="search-box" id="s-box" value="{{ search_value }}" placeholder="last name">
+        </form>
+    </div>
         <table class="table table-hover">
             <thead class="thead-dark">
             <tr>
                 <th>Email</th>
-                <th>First Name</th>
                 <th>Last Name</th>
+                <th>First Name</th>
                 <th>Branch Name</th>
                 <th>Edit</th>
                 <th>Delete</th>
