--- a/dispatcher_application/user_settings/templates/user_settings/profile_password_change.html
+++ b/dispatcher_application/user_settings/templates/user_settings/profile_password_change.html
@@ -3,13 +3,26 @@
 {% block title %}Change password{% endblock %}
 
 {% block content %}
-    <a class="back-link" href="{% url 'user-settings' %}"><i class="bi bi-arrow-bar-left"></i></a>
-    <h1>Change Password</h1>
+    <div class="container">
+        <div class="row">
+          <div class="col">
+            <a class="bi bi-arrow-bar-left btn btn-lg" id="back" href="{% url 'user-settings' %}"></a>
+          </div>
+          <div class="col-6" style="text-align: center;">
+            <h2>Change Password</h2>
+          </div>
+          <div class="col">
+          </div>
+        </div>
+    </div>
+    <br>
     
-    <form method="POST">
+    <div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
+        <br>
+    <form method="POST" class="formular2">
         {% csrf_token %}
         {{ form.as_p }}
-        <input class="" type="submit" value="Change">
+        <input class="btn btn-primary" id="btn-f2" type="submit" value="Change">
 
         {% if messages %}    
             {% for message in messages %}
@@ -17,5 +30,5 @@
             {% endfor %}
         {% endif %}
     </form>
-  
+</div>
 {% endblock %}
