--- a/dispatcher_application/user_management/templates/user_management/user_list.html
+++ b/dispatcher_application/user_management/templates/user_management/user_list.html
@@ -11,33 +11,43 @@
 <br>
 <div>
     <h2>System users</h2>
+
+    <div class="functions-bar">
         <a class="bi bi-plus-circle btn btn-lg" href="{% url 'user-add' %}"></a>
-        <table class="table table-hover">
-            <thead class="thead-dark">
-            <tr>
-                <th>Email</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Branch Name</th>
-                <th>Edit</th>
-                <th>Delete</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for user in object_list %}
-            <tr>
-                <td>{{ user.email }}</td>
-                <td>{{ user.last_name }}</td>
-                <td>{{ user.first_name }}</td>
-                <td>{{ user.branch }}</td>
-                <td><a class="bi bi-pencil-square btn btn-sm" href="{% url 'user-update' user.id %}"></a></td>
-                <td><a class="bi bi-x-lg btn btn-sm" href="{% url 'user-delete' user.id %}"></a></td>
-            </tr>
-        {% endfor %}
-        </tbody>
-        <table>
+
+        <form method="GET">
+            <button type="submit" class="search-button"><i class="bi bi-search"></i></button>
+            <input class="search-field" type="text" name="search-box" id="s-box" value="{{ search_value }}" placeholder="Email">
+        </form>
     </div>
+
+    
+    <table class="table table-hover">
+        <thead class="thead-dark">
+        <tr>
+            <th>Email</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Branch Name</th>
+            <th>Edit</th>
+            <th>Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for user in object_list %}
+        <tr>
+            <td>{{ user.email }}</td>
+            <td>{{ user.last_name }}</td>
+            <td>{{ user.first_name }}</td>
+            <td>{{ user.branch }}</td>
+            <td><a class="bi bi-pencil-square btn btn-sm" href="{% url 'user-update' user.id %}"></a></td>
+            <td><a class="bi bi-x-lg btn btn-sm" href="{% url 'user-delete' user.id %}"></a></td>
+        </tr>
+    {% endfor %}
+    </tbody>
+    <table>
 </div>
 
-{% comment %} {% include 'pagination.html' %} {% endcomment %}
+{% include 'pagination.html' %}
+
 {% endblock %}
