--- a/dispatcher_application/authentication/templates/authentication/login.html
+++ b/dispatcher_application/authentication/templates/authentication/login.html
@@ -22,6 +22,7 @@
 
 {% block content %}
 <br>
+  <h2 style="margin-top: 60px;">Log in</h2>
 <br>
     <form method="POST" action="" class="form-class">
         {% csrf_token %}
