--- a/dispatcher_application/branch_management/templates/branch_management/branch_delete.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_delete.html
@@ -16,7 +16,7 @@
 {% endcomment %}
 
 <br>
-<a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'branch-list' %}" style="padding-left: 350px"></a>
+<a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'branch-list' %}" style="margin-left: 350px"></a>
     <div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
             <br>
         <form method="POST" class="text">
