--- a/dispatcher_application/user_management/templates/user_management/user_add.html
+++ b/dispatcher_application/user_management/templates/user_management/user_add.html
@@ -30,7 +30,7 @@
 </div>
 {% endcomment %}
 
-<div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
+<div class="container d-flex justify-content-center" style="text-align: left;">
     <br>
     <form method="POST" class="formular2">
         {% csrf_token %}
