--- a/dispatcher_application/access_management/templates/access_management/group_list.html
+++ b/dispatcher_application/access_management/templates/access_management/group_list.html
@@ -13,11 +13,12 @@
           <button type="submit" class="search-button"><i class="bi bi-search"></i></button>
           <input class="search-field" type="text" name="search-box" id="s-box" value="{{ search_value }}" placeholder="group name">
       </form>
-
+      {% comment "" %}
       <form method="GET">
         {{filter.form}}
         <button class="bi bi-search btn btn-lg" type="submit"></button>
     </form>
+    {% endcomment %}
   </div>
 
     <table class="table table-hover">
