--- a/dispatcher_application/authentication/static/css/login2.css
+++ b/dispatcher_application/authentication/static/css/login2.css
@@ -7,11 +7,18 @@
 .form-class {
     border: 1px solid #e7e7e7;
     margin: 80px auto;
+    margin-top: 0px;
     width: 300px;
     padding: 40px 40px 40px 40px;
+    /*
+    border: 1px solid #e7e7e7;
+    margin: 80px auto;
+    width: 645px;
+    height: 353px;
+    padding: 107px 40px 40px 40px;
+    */
   }
   
-
 .input-box {
     display: block;
     position: relative;
