--- a/dispatcher_application/authentication/templates/authentication/reset_password_confirm.html
+++ b/dispatcher_application/authentication/templates/authentication/reset_password_confirm.html
@@ -22,7 +22,7 @@
 {% endcomment %}
 
 <br>
-<a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'user-list' %}" style="padding-left: 350px"></a>
+<a class="bi bi-arrow-bar-left btn btn-lg" href="{% url 'user-list' %}" style="margin-left: 350px"></a>
     <div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
             <br>
             <h3>Enter new password</h3>
