--- a/dispatcher_application/branch_management/templates/branch_management/branch_access_delete.html
+++ b/dispatcher_application/branch_management/templates/branch_management/branch_access_delete.html
@@ -17,7 +17,7 @@
 {% endcomment %}
 
 <br>
-<a class="bi bi-arrow-bar-left btn btn-lg" href="{{ request.META.HTTP_REFERER }}" style="padding-left: 350px"></a>
+<a class="bi bi-arrow-bar-left btn btn-lg" href="{{ request.META.HTTP_REFERER }}" style="margin-left: 350px"></a>
     <div class="container d-flex justify-content-center" style="text-align: left; padding: auto;">
             <br>
         <form method="POST" class="text">
