--- a/dispatcher_application/user_management/templates/user_management/user_list.html
+++ b/dispatcher_application/user_management/templates/user_management/user_list.html
@@ -17,7 +17,7 @@
 
         <form method="GET">
             <button type="submit" class="search-button"><i class="bi bi-search"></i></button>
-            <input class="search-field" type="text" name="search-box" id="s-box" value="{{ search_value }}" placeholder="Email">
+            <input class="search-field" type="text" name="search-box" id="s-box" value="{{ search_value }}" placeholder="email">
         </form>
     </div>
     <table class="table table-hover">
