Final error handling

--- a/dispatcher_application/access_management/templates/access_management/group_list.html
+++ b/dispatcher_application/access_management/templates/access_management/group_list.html
@@ -49,6 +49,6 @@
         </tbody>
     </table>
 
-{% comment %} {% include 'pagination.html' %} {% endcomment %}
+{% include 'pagination.html' %}
 
 {% endblock %}
