--- a/dispatcher_application/user_management/templates/user_management/user_list.html
+++ b/dispatcher_application/user_management/templates/user_management/user_list.html
@@ -34,7 +34,7 @@
     <tbody>
     {% for user in object_list %}
         <tr>
-            <td>{{ user.email }}</td>
+            <td><a href="{% url 'user-detail' user.id %}">{{ user.email }}</a></td>
             <td>{{ user.last_name }}</td>
             <td>{{ user.first_name }}</td>
             <td>{{ user.branch }}</td>
