Basic transport search

--- a/dispatcher_application/transport_management/templates/transport_management/transportation_form.html
+++ b/dispatcher_application/transport_management/templates/transport_management/transportation_form.html
@@ -4,8 +4,7 @@
 
 {% block static_imports %}
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static '/css/transport.css' %}">
-    
+    <link rel="stylesheet" type="text/css" href="{% static 'css/transport.css' %}">
 {% endblock %}
 
 {% block content %}
