--- a/dispatcher_application/known_locations_management/templates/known_locations_management/location_list.html
+++ b/dispatcher_application/known_locations_management/templates/known_locations_management/location_list.html
@@ -18,7 +18,7 @@
 
         <form method="GET">
             <button type="submit" class="search-button"><i class="bi bi-search"></i></button>
-            <input class="search-field" type="text" name="search-box" id="s-box" value="{{ search_value }}" placeholder="zip,city,country">
+            <input class="search-field" type="text" name="search-box" id="s-box" value="{{ search_value }}" placeholder="zip-code,city,country">
         </form>
     </div>
 
