--- a/dispatcher_application/transport_management/templates/transport_management/transportation_list.html
+++ b/dispatcher_application/transport_management/templates/transport_management/transportation_list.html
@@ -2,7 +2,34 @@
 
 {% block title %}Trasportations{% endblock %}
 
+{% block static_imports %}
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/transport_list.css' %}">
+{% endblock %}
+
 {% block content %}
+<br>
+<div class="transport-search">
+    <form method="GET">
+        
+        <label for="from-location">From:</label>
+        <input list="from-location"  name="from-location" id="from_id" value="{{ search_value.from }}" placeholder="zip-code,city,country-code" >
+        <datalist id="from-location">
+            {% for location in location_list %}
+                <option id={{ location.id }} value="{{ location.zip_code }},{{ location.city }},{{ location.country }}"></option>
+            {% empty %}
+                <option></option>
+            {% endfor %}
+        </datalist>
+        <label for="departure-date" class="">Departure date:</label>
+        <input type="date" class="" name="departure-date" id="departure-date" value="{{ search_value.departure }}">
+
+        <label for="arrival-date" class="">Arrival date:</label>
+        <input type="date" class="" name="arrival-date" id="arrival-date" value="{{ search_value.arrival }}">
+
+        <button type="submit" class="search-button"><i class="bi bi-search"></i></button>
+    </form>
+</div>
 <br>
 <h2>Transportations</h2>
 <a class="bi bi-plus-circle btn btn-lg" href="{% url 'transportation-add' %}"></a>
@@ -13,9 +40,9 @@
     <table class="table table-hover">
         <thead class="thead-dark">
         <tr>
-            <th scope="col">Date from</th>
+            <th scope="col">Departure date</th>
             <th scope="col">From</th>
-            <th scope="col">Date to</th>
+            <th scope="col">Arrival date</th>
             <th scope="col">To</th>
             <th scope="col">L(m)</th>
             <th scope="col">Dispatcher</th>
@@ -26,16 +53,14 @@
         <tbody>
 
         {% for t in object_list %}
-
-            <tr>
-            <td>{{t.departure_time}}</td>
-            <td>{{t.from_id}}</td>
-            <td>{{t.arrival_time}}</td>
-            <td>{{t.to_id}}</td>
-            <td>{{t.ldm}}</td>
-            <td>{{t.owner_id.email}}</td>
+            <td>{{ t.departure_time }}</td>
+            <td>{{ t.from_id }}</td>
+            <td>{{ t.arrival_time }}</td>
+            <td>{{ t.to_id }}</td>
+            <td>{{ t.ldm }}</td>
+            <td>{{ t.owner_id.email }}</td>
             <td><a class="bi bi-eye-fill btn btn-sm" href=""></a></td>
-            <td><input href="" class="form-check-input" type="checkbox" name="data" id="data" value={{t.id}}></td>
+            <td><input href="" class="form-check-input" type="checkbox" name="data" id="data" value={{ t.id }}></td>
             </tr>
         
         {% endfor %}
@@ -43,4 +68,7 @@
     </table>
     </div>
 </form>
+
+{% include 'pagination.html' %}
+
 {% endblock  %}
