--- a/dispatcher_application/user_management/templates/user_management/user_detail.html
+++ b/dispatcher_application/user_management/templates/user_management/user_detail.html
@@ -3,11 +3,22 @@
 {% block title %}User detail{% endblock %}
 
 {% block content %}
+<div class="container">
+    <div class="row">
+      <div class="col">
+        <a class="bi bi-arrow-bar-left btn btn-lg" id="back" href="{% url 'user-list' %}"></a>
+      </div>
+      <div class="col-6" style="text-align: center;">
+        <h2>User detail</h2>
+      </div>
+      <div class="col">
+      </div>
+    </div>
+</div>
 <div class="d-flex justify-content-center">
+    
+
     <div class="card" style="width: 18rem;;">
-		<div class="card-body">
-		  <h2 class="card-title">User detail</h2>
-		</div>
 		<ul class="list-group list-group-flush"></ul>
         <div class="card-body">
             <h3 class="card-title">Account Information</h3>
