--- a/dispatcher_application/user_management/templates/user_management/user_list.html
+++ b/dispatcher_application/user_management/templates/user_management/user_list.html
@@ -28,17 +28,19 @@
             <th>First Name</th>
             <th>Branch Name</th>
             <th>Edit</th>
+            <th>Detail</th>
             <th>Delete</th>
         </tr>
     </thead>
     <tbody>
     {% for user in object_list %}
         <tr>
-            <td><a href="{% url 'user-detail' user.id %}">{{ user.email }}</a></td>
+            <td>{{ user.email }}</td>
             <td>{{ user.last_name }}</td>
             <td>{{ user.first_name }}</td>
             <td>{{ user.branch }}</td>
             <td><a class="bi bi-pencil-square btn btn-sm" href="{% url 'user-update' user.id %}"></a></td>
+            <td><a class="bi bi-eye btn btn-sm" href="{% url 'user-detail' user.id %}"></a></td>
             <td><a class="bi bi-x-lg btn btn-sm" href="{% url 'user-delete' user.id %}"></a></td>
         </tr>
     {% endfor %}
